Prevent saving of annotation with only non-whitespace characters
* Prevent saving of annotation with only non-whitespace characters
* Prompt to delete existing comment when editing the comment results in only whitespace characters
* Display a detailed message when alerting users why comment cannot be saved due to only whitespace characters if users are able to bypass frontend checks
* Dismiss "failed to save comment" alert when user cancels adding the comment
* Add Generator::Random package

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -152,6 +152,7 @@ svg[aria-hidden=true],
   }
 
   .usa-alert {
+    float: left;
     margin-top: 15px;
   }
 }
